# backendAPI

./: README.md  data_validation.py  main.py  pyproject.toml  tempCodeRunnerFile.py
FastAPI/: main.py  patients.json
ML_api/: app.py  requirements.txt
Pydantic/: learn_data_validation.py
