[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pip>=25.1.1",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "unicorn[standard]>=2.1.3",
]
